# nook-license-bot

./: Cargo.toml
src/: lib.rs  main.rs
src/commands/: command_event_handler.rs  mod.rs  ping.rs
src/config/: config.rs
