[package]
name = "nooklicense-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

log = "0.4.20"
env_logger = "0.11.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

toml = "0.8.8"

clap = { version = "4.4.8", features = ["derive"] }

lazy_static = "1.4.0"